--- a/src/style/Pages.css
+++ b/src/style/Pages.css
@@ -79,7 +79,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: #fff;
+    color: black;
     text-align: center;
     width: 90%;
 }
